Fix inspector drawer toggle buttons

--- a/app/components/lookbook/ui/app/layout/layout.html.erb
+++ b/app/components/lookbook/ui/app/layout/layout.html.erb
@@ -22,7 +22,7 @@
         opts: {
           orientation: :horizontal,
           sizes: ["50%", "50%"],
-          min_sizes: [200, 200]
+          # min_sizes: [200, 200]
         }) do |sidebar|
           sidebar.with_pane("previews-nav") do |pane|
             pane.with_title { config.previews_nav_label }
