--- a/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
@@ -1,10 +1,9 @@
 <%=
-  render component_tag(key: "preview-inspector", x: {data: "previewInspector"}) do
+  render component_tag(key: "preview-inspector", x: {data: "previewInspector", ":class": "{'drawer-closed': drawerClosed}"}) do
     lb_pane_group("inspector-panes",
     opts: {
       orientation: :horizontal,
-      sizes: ["auto", "350px"],
-      min_sizes: [200, 200]
+      sizes: ["auto", "350px"]
     }) do |layout|
       layout.with_pane("preview-pane") do |pane|
         pane.with_action(icon: :panel_bottom_open, tooltip: "Open drawer", click: "openDrawer", show: "drawerClosed")
