--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -900,6 +900,29 @@ select {
 
 .tippy-content{position:relative;padding:5px 9px;z-index:1}
 
+[data-component="error-page"] {
+  padding: 1.25rem;
+  padding: var(--lookbook-spacing-large);
+  background-color: hsl(0, 86%, 97%);
+  background-color: var(--lookbook-color-danger-50);
+  height: 100%;
+  width: 100%;
+}
+
+[data-component="error-page"] .error-page-title {
+    color: hsl(0, 70%, 35%);
+    color: var(--lookbook-color-danger-800);
+    font-weight: 700;
+    font-weight: var(--lookbook-font-weight-bold);
+    font-size: 1.5rem;
+    font-size: var(--lookbook-font-size-x-large);
+  }
+
+[data-component="error-page"] .error-page-content {
+    margin-top: 0.75rem;
+    margin-top: var(--lookbook-spacing-small);
+  }
+
 [data-component="layout"] {
   height: 100vh;
   display: grid;
