--- a/app/components/lookbook/ui/elements/pane_group/pane_group.css
+++ b/app/components/lookbook/ui/elements/pane_group/pane_group.css
@@ -51,4 +51,12 @@
     width: 100%;
     overflow: hidden;
   }
+
+  [data-component="tab-panel"] {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    inset: 0;
+    overflow: hidden;
+  }
 }
