--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -964,243 +964,6 @@ select {
     border-top: 1px solid var(--lookbook-divider-color);
   }
 
-[data-component="page"] .page-slat {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
-    padding-left: var(--lookbook-spacing-x-large);
-    padding-right: var(--lookbook-spacing-x-large);
-  }
-
-[data-component="page"] .page-header {
-    border-bottom: 1px solid hsl(240, 5%, 84%);
-    border-bottom: 1px solid var(--lookbook-color-base-300);
-    padding-top: 1.75rem;
-    padding-bottom: 1.75rem;
-    padding-top: var(--lookbook-spacing-x-large);
-    padding-bottom: var(--lookbook-spacing-x-large);
-  }
-
-[data-component="page"] .page-title {
-    font-weight: 700;
-    font-weight: var(--lookbook-font-weight-bold);
-    font-size: 2.25rem;
-    font-size: var(--lookbook-font-size-2x-large);
-  }
-
-[data-component="page"] .page-body {
-    padding-top: 2.25rem;
-    padding-top: var(--lookbook-spacing-2x-large);
-    padding-bottom: 3rem;
-    padding-bottom: var(--lookbook-spacing-3x-large);
-  }
-
-[data-component="page"] .page-footer {
-    border-top: 1px solid hsl(240, 5%, 84%);
-    border-top: 1px solid var(--lookbook-color-base-300);
-    padding-top: 1.75rem;
-    padding-bottom: 1.75rem;
-    padding-top: var(--lookbook-spacing-x-large);
-    padding-bottom: var(--lookbook-spacing-x-large);
-  }
-
-[data-component="panel"][data-panel="code"] {
-}
-
-[data-component="panel"][data-panel="default"] {
-  height: 100%;
-}
-
-[data-component="param-editor"] {
-  /* select,
-  input:not([type="checkbox"], [type="radio"], [type="file"]) {
-    min-width: 240px;
-    padding-inline: var(--lookbook-spacing-small);
-    padding-block: var(--lookbook-spacing-x-small);
-    font-size: var(--lookbook-font-size-medium);
-    border: 1px solid var(--lookbook-color-base-300);
-    border-radius: var(--lookbook-border-radius-large);
-    appearance: none;
-  } */
-}
-
-[data-component="panel"][data-panel="params"] {
-  height: 100%;
-  background-color: hsl(0, 0%, 98%);
-  background-color: var(--lookbook-color-base-50);
-  padding-top: 1rem;
-  padding-top: var(--lookbook-spacing-medium);
-}
-
-[data-component="panel"][data-panel="params"] .params-panel-table {
-    background: #fff;
-    border: 1px solid hsl(240, 5%, 84%);
-    border: 1px solid var(--lookbook-color-base-300);
-  }
-
-[data-component="panel"][data-panel="params"] table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-
-[data-component="panel"][data-panel="params"] th,
-  [data-component="panel"][data-panel="params"] td {
-    text-align: left;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-left: var(--lookbook-spacing-medium);
-    padding-right: var(--lookbook-spacing-medium);
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    padding-top: var(--lookbook-spacing-small);
-    padding-bottom: var(--lookbook-spacing-small);
-    width: 1%;
-  }
-
-[data-component="panel"][data-panel="params"] th.param-description, [data-component="panel"][data-panel="params"] td.param-description {
-      width: auto;
-    }
-
-[data-component="panel"][data-panel="params"] th.param-editor, [data-component="panel"][data-panel="params"] td.param-editor {
-      width: 25%;
-      max-width: 400px;
-    }
-
-[data-component="panel"][data-panel="params"] thead tr,
-  [data-component="panel"][data-panel="params"] tr:not(:last-child) {
-    border-bottom: 1px solid hsl(240, 5%, 84%);
-    border-bottom: 1px solid var(--lookbook-color-base-300);
-  }
-
-[data-component="panel"][data-panel="params"] code {
-    font-size: 0.875rem;
-    font-size: var(--lookbook-font-size-small);
-  }
-
-[data-component="preview-inspector"] {
-  height: 100%;
-  width: 100%;
-}
-
-[data-component="preview-inspector"] .inspector-layout {
-    height: 100%;
-    width: 100%;
-  }
-
-.drawer-closed[data-component="preview-inspector"] #inspector-panes {
-      grid-template-rows: 1fr !important;
-    }
-
-.drawer-closed[data-component="preview-inspector"] #inspector-panes > .pane-group-gutter,
-      .drawer-closed[data-component="preview-inspector"] #inspector-panes > .pane-group-pane:not(:first-child) {
-        display: none;
-      }
-
-[data-component="panel"][data-panel="prose"] {
-  height: 100%;
-}
-
-[data-component="panel"][data-panel="prose"] [data-component="prose"] {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-left: var(--lookbook-spacing-medium);
-    padding-right: var(--lookbook-spacing-medium);
-    height: 100%;
-    overflow: auto;
-  }
-
-[data-component="preview-overview"] {
-  height: 100%;
-  width: 100%;
-  position: relative;
-}
-
-[data-component="preview-overview"] [data-component="pane"] .pane-content {
-      display: grid;
-      grid-template-rows: min-content 1fr;
-    }
-
-[data-component="preview-overview"] .po-title-icon {
-    margin-right: 0.5rem;
-    margin-right: var(--lookbook-spacing-x-small);
-  }
-
-[data-component="preview-overview"] .po-title {
-    font-weight: 600;
-    letter-spacing: 0.4;
-  }
-
-[data-component="preview-overview"] .po-content {
-    height: 100%;
-    overflow: auto;
-  }
-
-[data-component="preview-overview"] .po-content section {
-      padding-top: 1.25rem;
-      padding-bottom: 1.25rem;
-      padding-top: var(--lookbook-spacing-large);
-      padding-bottom: var(--lookbook-spacing-large);
-      padding-left: 1rem;
-      padding-right: 1rem;
-      padding-left: var(--lookbook-spacing-medium);
-      padding-right: var(--lookbook-spacing-medium);
-    }
-
-[data-component="preview-overview"] .po-content section + section {
-      border-top: 1px solid hsl(240, 5%, 84%);
-      border-top: 1px solid var(--lookbook-divider-color);
-    }
-
-[data-component="preview-overview"] .po-section-title {
-    font-weight: 400;
-    margin-bottom: 1rem;
-    margin-bottom: var(--lookbook-spacing-medium);
-  }
-
-[data-component="preview-overview"] .po-targets li:not(:last-child) {
-      margin-bottom: 0.5rem;
-      margin-bottom: var(--lookbook-spacing-x-small);
-    }
-
-[data-component="preview-overview"] .po-breadcrumbs {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    font-size: 0.875rem;
-    font-size: var(--lookbook-font-size-small);
-    background-color: hsl(0, 0%, 98%);
-    background-color: var(--lookbook-color-base-50);
-    color: hsl(240, 4%, 46%);
-    color: var(--lookbook-color-base-500);
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-left: var(--lookbook-spacing-medium);
-    padding-right: var(--lookbook-spacing-medium);
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-top: var(--lookbook-spacing-x-small);
-    padding-bottom: var(--lookbook-spacing-x-small);
-    border-bottom: 1px solid hsl(240, 5%, 84%);
-    border-bottom: 1px solid var(--lookbook-divider-color);
-  }
-
-[data-component="preview-overview"] .po-breadcrumbs .po-breadcrumb-divider {
-      display: block;
-      margin-left: 0.25rem;
-      margin-left: var(--lookbook-spacing-2x-small);
-      margin-right: 0.25rem;
-      margin-right: var(--lookbook-spacing-2x-small);
-    }
-
-[data-component="reader"] {
-  height: 100%;
-  width: 100%;
-}
-
-[data-component="reader"] iframe {
-    height: 100%;
-    width: 100%;
-  }
-
 [data-component="status-bar"] {
   height: 24px;
   font-size: 0.75rem;
@@ -1560,14 +1323,6 @@ select {
   }
 
 [data-component="tab-panel"] {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
 }
 
 [data-component="pane-group"] {
@@ -1618,6 +1373,17 @@ select {
 [data-component="pane-group"] .pane-group-pane {
     height: 100%;
     width: 100%;
+    overflow: hidden;
+  }
+
+[data-component="pane-group"] [data-component="tab-panel"] {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     overflow: hidden;
   }
 
@@ -2218,3 +1984,249 @@ select {
     width: 1rem;
     width: var(--lookbook-size-medium);
   }
+
+[data-component="page"] .page-slat {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+    padding-left: var(--lookbook-spacing-x-large);
+    padding-right: var(--lookbook-spacing-x-large);
+  }
+
+[data-component="page"] .page-header {
+    border-bottom: 1px solid hsl(240, 5%, 84%);
+    border-bottom: 1px solid var(--lookbook-color-base-300);
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+    padding-top: var(--lookbook-spacing-x-large);
+    padding-bottom: var(--lookbook-spacing-x-large);
+  }
+
+[data-component="page"] .page-title {
+    font-weight: 700;
+    font-weight: var(--lookbook-font-weight-bold);
+    font-size: 2.25rem;
+    font-size: var(--lookbook-font-size-2x-large);
+  }
+
+[data-component="page"] .page-body {
+    padding-top: 2.25rem;
+    padding-top: var(--lookbook-spacing-2x-large);
+    padding-bottom: 3rem;
+    padding-bottom: var(--lookbook-spacing-3x-large);
+  }
+
+[data-component="page"] .page-footer {
+    border-top: 1px solid hsl(240, 5%, 84%);
+    border-top: 1px solid var(--lookbook-color-base-300);
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+    padding-top: var(--lookbook-spacing-x-large);
+    padding-bottom: var(--lookbook-spacing-x-large);
+  }
+
+[data-component="reader"] {
+  height: 100%;
+  width: 100%;
+}
+
+[data-component="reader"] iframe {
+    height: 100%;
+    width: 100%;
+  }
+
+[data-component="panel"][data-panel="code"] {
+}
+
+[data-component="panel"][data-panel="default"] {
+  height: 100%;
+}
+
+[data-component="param-editor"] {
+  /* select,
+  input:not([type="checkbox"], [type="radio"], [type="file"]) {
+    min-width: 240px;
+    padding-inline: var(--lookbook-spacing-small);
+    padding-block: var(--lookbook-spacing-x-small);
+    font-size: var(--lookbook-font-size-medium);
+    border: 1px solid var(--lookbook-color-base-300);
+    border-radius: var(--lookbook-border-radius-large);
+    appearance: none;
+  } */
+}
+
+[data-component="panel"][data-panel="params"] {
+  height: 100%;
+  background-color: hsl(0, 0%, 98%);
+  background-color: var(--lookbook-color-base-50);
+  padding-top: 1rem;
+  padding-top: var(--lookbook-spacing-medium);
+}
+
+[data-component="panel"][data-panel="params"] .params-panel-table {
+    background: #fff;
+    border: 1px solid hsl(240, 5%, 84%);
+    border: 1px solid var(--lookbook-color-base-300);
+  }
+
+[data-component="panel"][data-panel="params"] table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+
+[data-component="panel"][data-panel="params"] th,
+  [data-component="panel"][data-panel="params"] td {
+    text-align: left;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-left: var(--lookbook-spacing-medium);
+    padding-right: var(--lookbook-spacing-medium);
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-top: var(--lookbook-spacing-small);
+    padding-bottom: var(--lookbook-spacing-small);
+    width: 1%;
+  }
+
+[data-component="panel"][data-panel="params"] th.param-description, [data-component="panel"][data-panel="params"] td.param-description {
+      width: auto;
+    }
+
+[data-component="panel"][data-panel="params"] th.param-editor, [data-component="panel"][data-panel="params"] td.param-editor {
+      width: 25%;
+      max-width: 400px;
+    }
+
+[data-component="panel"][data-panel="params"] thead tr,
+  [data-component="panel"][data-panel="params"] tr:not(:last-child) {
+    border-bottom: 1px solid hsl(240, 5%, 84%);
+    border-bottom: 1px solid var(--lookbook-color-base-300);
+  }
+
+[data-component="panel"][data-panel="params"] code {
+    font-size: 0.875rem;
+    font-size: var(--lookbook-font-size-small);
+  }
+
+[data-component="panel"][data-panel="prose"] {
+  height: 100%;
+}
+
+[data-component="panel"][data-panel="prose"] [data-component="prose"] {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-left: var(--lookbook-spacing-medium);
+    padding-right: var(--lookbook-spacing-medium);
+    height: 100%;
+    overflow: auto;
+  }
+
+[data-component="preview-embed"] .embed-preview {
+    height: 300px;
+  }
+
+[data-component="preview-embed"] .embed-drawer {
+    border-top: 1px solid hsl(240, 5%, 84%);
+    border-top: 1px solid var(--lookbook-divider-color);
+  }
+
+[data-component="preview-inspector"] {
+  height: 100%;
+  width: 100%;
+}
+
+[data-component="preview-inspector"] .inspector-layout {
+    height: 100%;
+    width: 100%;
+  }
+
+.drawer-closed[data-component="preview-inspector"] #inspector-panes {
+      grid-template-rows: 1fr !important;
+    }
+
+.drawer-closed[data-component="preview-inspector"] #inspector-panes > .pane-group-gutter,
+      .drawer-closed[data-component="preview-inspector"] #inspector-panes > .pane-group-pane:not(:first-child) {
+        display: none;
+      }
+
+[data-component="preview-overview"] {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+[data-component="preview-overview"] [data-component="pane"] .pane-content {
+      display: grid;
+      grid-template-rows: min-content 1fr;
+    }
+
+[data-component="preview-overview"] .po-title-icon {
+    margin-right: 0.5rem;
+    margin-right: var(--lookbook-spacing-x-small);
+  }
+
+[data-component="preview-overview"] .po-title {
+    font-weight: 600;
+    letter-spacing: 0.4;
+  }
+
+[data-component="preview-overview"] .po-content {
+    height: 100%;
+    overflow: auto;
+  }
+
+[data-component="preview-overview"] .po-content section {
+      padding-top: 1.25rem;
+      padding-bottom: 1.25rem;
+      padding-top: var(--lookbook-spacing-large);
+      padding-bottom: var(--lookbook-spacing-large);
+      padding-left: 1rem;
+      padding-right: 1rem;
+      padding-left: var(--lookbook-spacing-medium);
+      padding-right: var(--lookbook-spacing-medium);
+    }
+
+[data-component="preview-overview"] .po-content section + section {
+      border-top: 1px solid hsl(240, 5%, 84%);
+      border-top: 1px solid var(--lookbook-divider-color);
+    }
+
+[data-component="preview-overview"] .po-section-title {
+    font-weight: 400;
+    margin-bottom: 1rem;
+    margin-bottom: var(--lookbook-spacing-medium);
+  }
+
+[data-component="preview-overview"] .po-targets li:not(:last-child) {
+      margin-bottom: 0.5rem;
+      margin-bottom: var(--lookbook-spacing-x-small);
+    }
+
+[data-component="preview-overview"] .po-breadcrumbs {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    font-size: 0.875rem;
+    font-size: var(--lookbook-font-size-small);
+    background-color: hsl(0, 0%, 98%);
+    background-color: var(--lookbook-color-base-50);
+    color: hsl(240, 4%, 46%);
+    color: var(--lookbook-color-base-500);
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-left: var(--lookbook-spacing-medium);
+    padding-right: var(--lookbook-spacing-medium);
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-top: var(--lookbook-spacing-x-small);
+    padding-bottom: var(--lookbook-spacing-x-small);
+    border-bottom: 1px solid hsl(240, 5%, 84%);
+    border-bottom: 1px solid var(--lookbook-divider-color);
+  }
+
+[data-component="preview-overview"] .po-breadcrumbs .po-breadcrumb-divider {
+      display: block;
+      margin-left: 0.25rem;
+      margin-left: var(--lookbook-spacing-2x-small);
+      margin-right: 0.25rem;
+      margin-right: var(--lookbook-spacing-2x-small);
+    }
