--- a/app/views/lookbook/previews/embed.html.erb
+++ b/app/views/lookbook/previews/embed.html.erb
@@ -3,6 +3,6 @@
     preview: @preview,
     target: @target,
     panels: @inspector.embed_panels,
-    preview_params: request.query_parameters
+    preview_params: {}
   )
 %>
