--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" class="lookbook-theme-light">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-
-  <%= lookbook_asset_tags("app") %>
-  
-  <title><%= @config.project_name %></title>
-</head>
-<body>
-  <%=
+<% content_for :body do %>
+   <%=
     render Lookbook::UI::Router.new(events_endpoint: @events_endpoint.to_json) do
       render Lookbook::UI::Layout.new(id: "app") do |layout|
         layout.with_header do
@@ -31,5 +19,6 @@
       end
     end
   %>
-</body>
-</html>
+<% end %>
+
+<%= render template: "layouts/lookbook/skeleton" %>
