--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -22,8 +22,22 @@ router {
   display: none !important;
 }
 
-sl-tooltip {
-  &::part(body) {
-    font-size: var(--lookbook-font-size-x-small);
-  }
+table {
+  background: var(--lookbook-color-base-0);
+  border: 1px solid var(--lookbook-color-base-300);
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  text-align: left;
+  padding-inline: var(--lookbook-spacing-medium);
+  padding-block: var(--lookbook-spacing-small);
+  width: 1%;
+}
+
+thead tr,
+tr:not(:last-child) {
+  border-bottom: 1px solid var(--lookbook-color-base-300);
 }
