--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -235,6 +235,7 @@
   --lookbook-color-accent-900: var(--lookbook-color-indigo-900);
   --lookbook-color-accent-950: var(--lookbook-color-indigo-950);
 
+  --lookbook-color-base-0: #fff;
   --lookbook-color-base-50: var(--lookbook-color-gray-50);
   --lookbook-color-base-100: var(--lookbook-color-gray-100);
   --lookbook-color-base-200: var(--lookbook-color-gray-200);
@@ -621,10 +622,34 @@ router {
   display: none !important;
 }
 
-sl-tooltip::part(body) {
-    font-size: 0.75rem;
-    font-size: var(--lookbook-font-size-x-small);
-  }
+table {
+  background: #fff;
+  background: var(--lookbook-color-base-0);
+  border: 1px solid hsl(240, 5%, 84%);
+  border: 1px solid var(--lookbook-color-base-300);
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  text-align: left;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-left: var(--lookbook-spacing-medium);
+  padding-right: var(--lookbook-spacing-medium);
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-top: var(--lookbook-spacing-small);
+  padding-bottom: var(--lookbook-spacing-small);
+  width: 1%;
+}
+
+thead tr,
+tr:not(:last-child) {
+  border-bottom: 1px solid hsl(240, 5%, 84%);
+  border-bottom: 1px solid var(--lookbook-color-base-300);
+}
 
 input[type="text"],
 input:where(:not([type])),
@@ -1069,6 +1094,7 @@ select {
   padding-right: 1rem;
   padding-left: var(--lookbook-spacing-medium);
   padding-right: var(--lookbook-spacing-medium);
+  background: #fff;
   background: var(--lookbook-color-base-0);
   border: 1px solid hsl(240, 5%, 84%);
   border: 1px solid var(--lookbook-divider-color);
@@ -1395,6 +1421,8 @@ select {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  background-color: hsl(0, 0%, 98%);
+  background-color: var(--lookbook-color-base-50);
 }
 
 [data-component="panel"] .panel-content {
@@ -1404,10 +1432,8 @@ select {
   }
 
 [data-component="panel"][data-padded="true"] .panel-content {
-      padding-left: 1rem;
-      padding-right: 1rem;
-      padding-left: var(--lookbook-spacing-medium);
-      padding-right: var(--lookbook-spacing-medium);
+      padding: 1rem;
+      padding: var(--lookbook-spacing-medium);
     }
 
 [data-component="panel"][data-scrollable="true"] .panel-content {
@@ -2056,34 +2082,10 @@ select {
 
 [data-component="panel"][data-panel="params"] {
   height: 100%;
-  background-color: hsl(0, 0%, 98%);
-  background-color: var(--lookbook-color-base-50);
-  padding-top: 1rem;
-  padding-top: var(--lookbook-spacing-medium);
 }
-
-[data-component="panel"][data-panel="params"] .params-panel-table {
-    background: #fff;
-    border: 1px solid hsl(240, 5%, 84%);
-    border: 1px solid var(--lookbook-color-base-300);
-  }
-
-[data-component="panel"][data-panel="params"] table {
-    width: 100%;
-    border-collapse: collapse;
-  }
 
 [data-component="panel"][data-panel="params"] th,
   [data-component="panel"][data-panel="params"] td {
-    text-align: left;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-left: var(--lookbook-spacing-medium);
-    padding-right: var(--lookbook-spacing-medium);
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    padding-top: var(--lookbook-spacing-small);
-    padding-bottom: var(--lookbook-spacing-small);
     width: 1%;
   }
 
@@ -2095,12 +2097,6 @@ select {
       width: 25%;
       max-width: 400px;
     }
-
-[data-component="panel"][data-panel="params"] thead tr,
-  [data-component="panel"][data-panel="params"] tr:not(:last-child) {
-    border-bottom: 1px solid hsl(240, 5%, 84%);
-    border-bottom: 1px solid var(--lookbook-color-base-300);
-  }
 
 [data-component="panel"][data-panel="params"] code {
     font-size: 0.875rem;
