Add code sample to embeds demo page

--- a/app/components/lookbook/ui/elements/prose/prose.css
+++ b/app/components/lookbook/ui/elements/prose/prose.css
@@ -238,6 +238,11 @@
     margin-bottom: 0;
   }
 
+  lookbook-embed {
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+
   h2 code {
     font-size: 0.875em;
   }
