--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1704,6 +1704,11 @@ select {
     margin-bottom: 0;
   }
 
+[data-component="prose"] lookbook-embed {
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+
 [data-component="prose"] h2 code {
     font-size: 0.875em;
   }
