Only reload page iframe if content has changed

--- a/app/components/lookbook/ui/pages/page_browser/page_browser.html.erb
+++ b/app/components/lookbook/ui/pages/page_browser/page_browser.html.erb
@@ -1,3 +1,3 @@
-<%= render component_tag(x: {data: "pageBrowser", "@lookbook:page-update.window": "reload"}) do %>
+<%= render component_tag(key: checksum, x: {data: "pageBrowser"}) do %>
   <iframe x-ref="iframe" src="<%= src %>" frameborder="0" @message.window="handleMessage" seamless></iframe>
 <% end %>
