--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -1,3 +1,3 @@
 <%= lb_pane(id: dom_id(@page)) do %>
-  <%= render Lookbook::UI::PageBrowser.new(src: main_app.lookbook_render_page_path(@page)) %>
+  <%= render Lookbook::UI::PageBrowser.new(src: main_app.lookbook_render_page_path(@page), checksum: @page.source_checksum) %>
 <% end %>
