--- a/app/components/lookbook/ui/elements/nav/nav_item/nav_item.css
+++ b/app/components/lookbook/ui/elements/nav/nav_item/nav_item.css
@@ -1,5 +1,9 @@
 [data-component="nav-item"] {
+  width: 100%;
+  overflow: hidden;
+
   .nav-item-item {
+    width: 100%;
     display: flex;
     align-items: center;
     border-left: 3px solid transparent;
@@ -9,6 +13,7 @@
   .nav-item-indentation {
     width: var(--lookbook-spacing-medium);
     height: 100%;
+    flex: none;
   }
 
   .nav-item-toggle {
@@ -27,10 +32,21 @@
     align-items: center;
     width: 100%;
     height: 32px;
+    min-width: 0;
 
     .icon {
+      flex: none;
       margin-right: var(--lookbook-spacing-x-small);
       height: var(--lookbook-spacing-medium);
+    }
+
+    span {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      display: block;
+      width: 100%;
+      text-align: left;
     }
   }
 
