Remove prettier option for code blocks

--- a/app/components/lookbook/ui/elements/code/code.html.erb
+++ b/app/components/lookbook/ui/elements/code/code.html.erb
@@ -1,6 +1,6 @@
 <%= render component_tag(x:
   {
-    data: "code({lang: #{lang.to_json}, prettify: #{prettify?.to_json}})",
+    data: "code({lang: #{lang.to_json}})",
     ":class": "{'wrap-lines': wrap}"
   }
 ) do %>
