--- a/app/views/lookbook/previews/show.html.erb
+++ b/app/views/lookbook/previews/show.html.erb
@@ -1,7 +1,7 @@
 <%=
   render Lookbook::UI::PreviewOverview.new(
-    preview:@preview,
-    targets: @targets
+    preview: @preview,
+    targets: @targets.select(&:visible?)
   )
 %>
 
