--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -6,8 +6,8 @@
           link_to @config.project_name, root_path
         end
 
-        layout.with_previews_nav(@previews.to_tree)
-        layout.with_pages_nav(@pages.to_tree)
+        layout.with_previews_nav(@previews.tree)
+        layout.with_pages_nav(@pages.tree)
 
         layout.with_main do
           content_for?(:main) ? yield(:main) : yield
