--- a/assets/entrypoints/page.css
+++ b/assets/entrypoints/page.css
@@ -3,5 +3,5 @@
 @import "../css/base.css";
 @import "../css/tooltips.css";
 
-@import-glob "../../app/components/lookbook/ui/elements/{code,prose}/*.css";
+@import-glob "../../app/components/lookbook/ui/elements/{code,prose,icon}/*.css";
 @import-glob "../../app/components/lookbook/ui/pages/page/*.css";
